:sparkles: Add share token api
